@@ -37,7 +37,7 @@
 
 #include "sg_pt_win32.h"
 
-static const char * version_str = "1.13 (win32) 20140728";
+static const char * version_str = "1.14 (win32) 20140807";
 
 #define MAX_SCSI_ELEMS 1024
 #define MAX_ADAPTER_NUM 64
@@ -143,7 +143,7 @@ union STORAGE_DEVICE_DESCRIPTOR_DATA {
 
 union STORAGE_DEVICE_UID_DATA {
     STORAGE_DEVICE_UNIQUE_IDENTIFIER desc;
-    char raw[512];
+    char raw[1060];
 };
 
 struct storage_elem {
@@ -292,8 +292,7 @@ query_dev_property(HANDLE hdevice,
 }
 
 static int
-query_dev_uid(HANDLE hdevice,
-                    union STORAGE_DEVICE_UID_DATA * data)
+query_dev_uid(HANDLE hdevice, union STORAGE_DEVICE_UID_DATA * data)
 {
     DWORD num_out, err;
     char b[256];
@@ -301,6 +300,23 @@ query_dev_uid(HANDLE hdevice,
                                     PropertyStandardQuery, {0} };
 
     memset(data, 0, sizeof(*data));
+    num_out = 0;
+    query.QueryType = PropertyExistsQuery;
+    if (! DeviceIoControl(hdevice, IOCTL_STORAGE_QUERY_PROPERTY,
+                          &query, sizeof(query), NULL, 0, &num_out, NULL)) {
+        if (verbose > 2) {
+            err = GetLastError();
+            fprintf(stderr, "  IOCTL_STORAGE_QUERY_PROPERTY(DevUid(exists)) "
+                    "failed, Error=%ld %s\n", err,
+                    get_err_str(err, sizeof(b), b));
+        }
+        if (verbose > 3)
+            fprintf(stderr, "      num_out=%ld\n", num_out);
+        /* interpret any error to mean this property doesn't exist */
+        return 0;
+    }
+
+    query.QueryType = PropertyStandardQuery;
     if (! DeviceIoControl(hdevice, IOCTL_STORAGE_QUERY_PROPERTY,
                           &query, sizeof(query), data, sizeof(*data),
                           &num_out, NULL)) {
@@ -379,7 +395,7 @@ enum_scsi_adapters(void)
             hole_count = 0;
             success = DeviceIoControl(fh, IOCTL_SCSI_GET_INQUIRY_DATA,
                                       NULL, 0, inqDataBuff,
-                                      sizeof(inqDataBuff), &dummy, FALSE);
+                                      sizeof(inqDataBuff), &dummy, NULL);
             if (success) {
                 PSCSI_BUS_DATA pbd;
                 PSCSI_INQUIRY_DATA pid;
@@ -418,11 +434,13 @@ enum_scsi_adapters(void)
             }
             CloseHandle(fh);
         } else {
-            if (verbose > 3) {
-                err = GetLastError();
+            err = GetLastError();
+            if (ERROR_SHARING_VIOLATION == err)
+                fprintf(stderr, "%s: in use by other process (sharing "
+                        "violation [34])\n", adapter_name);
+            else if (verbose > 3)
                 fprintf(stderr, "%s: CreateFile failed err=%lu\n\t%s",
                         adapter_name, err, get_err_str(err, sizeof(b), b));
-            }
             if (++hole_count >= MAX_HOLE_COUNT)
                 break;
         }
@@ -504,11 +522,13 @@ enum_pds(void)
             memcpy(&storage_arr[next_unused_elem++], &tmp_se, sizeof(tmp_se));
             CloseHandle(fh);
         } else {
-            if (verbose > 3) {
-                err = GetLastError();
+            err = GetLastError();
+            if (ERROR_SHARING_VIOLATION == err)
+                fprintf(stderr, "%s: in use by other process (sharing "
+                        "violation [34])\n", adapter_name);
+            else if (verbose > 3)
                 fprintf(stderr, "%s: CreateFile failed err=%lu\n\t%s",
                         adapter_name, err, get_err_str(err, sizeof(b), b));
-            }
             if (++hole_count >= MAX_HOLE_COUNT)
                 break;
         }
@@ -552,11 +572,13 @@ enum_cdroms(void)
             memcpy(&storage_arr[next_unused_elem++], &tmp_se, sizeof(tmp_se));
             CloseHandle(fh);
         } else {
-            if (verbose > 3) {
-                err = GetLastError();
+            err = GetLastError();
+            if (ERROR_SHARING_VIOLATION == err)
+                fprintf(stderr, "%s: in use by other process (sharing "
+                        "violation [34])\n", adapter_name);
+            else if (verbose > 3)
                 fprintf(stderr, "%s: CreateFile failed err=%lu\n\t%s",
                         adapter_name, err, get_err_str(err, sizeof(b), b));
-            }
             if (++hole_count >= MAX_HOLE_COUNT)
                 break;
         }
@@ -600,11 +622,13 @@ enum_tapes(void)
             memcpy(&storage_arr[next_unused_elem++], &tmp_se, sizeof(tmp_se));
             CloseHandle(fh);
         } else {
-            if (verbose > 3) {
-                err = GetLastError();
+            err = GetLastError();
+            if (ERROR_SHARING_VIOLATION == err)
+                fprintf(stderr, "%s: in use by other process (sharing "
+                        "violation [34])\n", adapter_name);
+            else if (verbose > 3)
                 fprintf(stderr, "%s: CreateFile failed err=%lu\n\t%s",
                         adapter_name, err, get_err_str(err, sizeof(b), b));
-            }
             if (++hole_count >= MAX_HOLE_COUNT)
                 break;
         }
@@ -668,12 +692,12 @@ sg_do_wscan(char letter, int show_bt, int scsi_scan)
                     printf("%s", sp->qp_descriptor.raw + j);
                 printf("\n");
                 if (verbose > 2)
-                    dStrHex(sp->qp_descriptor.raw, 144, 0);
+                    dStrHexErr(sp->qp_descriptor.raw, 144, 0);
             } else
                 printf("\n");
             if ((verbose > 3) && sp->qp_uid_valid) {
                 printf("  UID valid, in hex:\n");
-                dStrHex(sp->qp_uid.raw, sizeof(sp->qp_uid.raw), 1);
+                dStrHexErr(sp->qp_uid.raw, sizeof(sp->qp_uid.raw), 1);
             }
         }
     }
